Refactor stimulus.html for improved structure and style
Updated the HTML structure and styles for the DOGE Stimulus Program page, including header, body content, and footer.

--- a/stimulus.html
+++ b/stimulus.html
@@ -137,7 +137,7 @@
     <!-- Text -->
     <div class="header-text">
       <div class="title">Department of Government Efficiency</div>
-      <div class="subtitle">The people voted for direct relief.</div>
+      <div class="subtitle">The people voted for DIRECT relief.</div>
     </div>
   </div>
 </div>
@@ -382,3 +382,4 @@
 
 </body>
 </html>
+
